--- a/language/en-GB/en-GB.plg_vmpayment_ifthenpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_ifthenpay.ini
@@ -100,4 +100,7 @@ VMPAYMENT_IFTHENPAY_AWAITING_PAYMENT="Awaiting payment"
 VMPAYMENT_IFTHENPAY_VIEW_ORDER="View your order"
 
 
+; shopper confirmation email
 
+VMPAYMENT_IFTHENPAY_EMAIL_GATEWAY_LINK="Payment Gateway Link"
+VMPAYMENT_IFTHENPAY_EMAIL_GATEWAY_DESC="Did not pay? Access this link to complete payment."
