--- a/language/pt-PT/pt-PT.plg_vmpayment_ifthenpay.ini
+++ b/language/pt-PT/pt-PT.plg_vmpayment_ifthenpay.ini
@@ -97,3 +97,8 @@ VMPAYMENT_IFTHENPAY_AWAITING_PAYMENT="Aguarda Pagamento"
 ; orders customer
 
 VMPAYMENT_IFTHENPAY_VIEW_ORDER="Ver Encomenda"
+
+; shopper confirmation email
+
+VMPAYMENT_IFTHENPAY_EMAIL_GATEWAY_LINK="Link para Pagamento"
+VMPAYMENT_IFTHENPAY_EMAIL_GATEWAY_DESC="Não pagou? Aceda a este link para completar o pagamento."
